--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 body{
-  padding-left: 100px;
-  padding-top: 100px;
-  padding-right: 100px;
-  padding-bottom: 100px;
+  padding-left: 10px;
+  padding-top: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
 
 }
 
-/*#canvas2 {
-  border-top: 1100px;
-}*/
+a{
+  font-size: 30px;
+}
+
+#canvas {
+  /*border-top: 0px;*/
+  border: 1px solid black;
+}
