functions re-named and moved to app.js, name for views changed to match functions, forceXy * 1 commented out as duplicate, new data files from init and sec, views and data folders added to reduce clutter, all files re-named and working.

--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
 body{
-  padding-left: 10px;
-  padding-top: 10px;
-  padding-right: 10px;
-  padding-bottom: 10px;
+  padding-left: 1%;
+  padding-top: 1%;
+  padding-right: 1%;
+  padding-bottom: 1%;
 
 }
 
 a{
   font-size: 30px;
+}
+
+h1{
+  text-align: center;
+}
+
+.home{
+  position: fixed;
+  left: 49%;
 }
 
 #canvas {
