--- a/views/forceXy.html
+++ b/views/forceXy.html
@@ -25,13 +25,14 @@
 <canvas id="canvas" width='2000px' height='2000px'>
   <script>
   // data, start, stop, multiX, multiY, dropData
-  forceXy(dataSpin3, 2000, 2900, 1000, 1000, 1);
+  // forceXy(dataAccelAndBrake, 0000, 4489, 1000, 1000, 1);
+  forceXy(data5MileUp, 0000, 20000, 1000, 1000, 20);
   </script>
 </canvas>
 
 
 <hr>
-<div><a href="./index.html">Home</a></div>
+<div><a href="./index.html" class="home">Home</a></div>
 <hr>
 
 </body>
