--- a/views/forceXyTimeX.html
+++ b/views/forceXyTimeX.html
@@ -24,12 +24,14 @@
 <canvas id="canvas" width='2000px' height='2000px'>
   <script>
     //data, start, stop, multiX, multiY, dropDataPoints
-    forceXyTimeX(dataSpin3, 0, 5000, 500, 500, 1);
+    // forceXyTimeX(dataSpin3, 0, 5000, 500, 500, 1);
+    // forceXyTimeX(dataAccelAndBrake, 0000, 4489, 1000, 1000, 1);
+    forceXyTimeX(data5MileUp, 0000, 20000, 1000, 1000, 20);
   </script>
 </canvas>
 
 <hr>
-<div><a href="./index.html">Home</a></div>
+<div><a href="./index.html" class="home">Home</a></div>
 <hr>
 
 </body>
