--- a/views/forceXyzAdjustableTimeXyz.html
+++ b/views/forceXyzAdjustableTimeXyz.html
@@ -25,13 +25,14 @@
 <canvas id="canvas" width='2000px' height='2000px'>
   <script>
     // data, start, stop, multX, multY, multZ, timeMult, dropData
-    forceXyzAdjustableTimeXyz(dataSpin3, 1500, 2900, 100, 100, 100, 1, 1);
+    // forceXyzAdjustableTimeXyz(dataAccelAndBrake, 1500, 2900, 100, 100, 100, 1, 1);
+    forceXyzAdjustableTimeXyz(data5MileUp, 0000, 20000, 100, 100, 100, 1, 20);
   </script>
 </canvas>
 
 
 <hr>
-<div><a href="./index.html">Home</a></div>
+<div><a href="./index.html" class="home">Home</a></div>
 <hr>
 
 </body>
