--- a/views/index.html.erb
+++ b/views/index.html.erb
@@ -21,16 +21,11 @@
 </head>
 <body>
 
-<canvas id="canvas" height="2000px" width="2000px">
-  <script>
-  // data, start, stop, multiX, multiY, multiZ, multiTime, dropDataPoints
-  // forceXyzTimeXyz(dataAccelAndBrake, 1000, 6000, 200, 200, 200, 5, 10);
-  forceXyzTimeXyz(data5MileUp, 0000, 20000, 200, 200, 200, 5, 20);
-  </script>
-</canvas>
-
-<hr>
-<div><a href="./index.html" class="home">Home</a></div>
-<hr>
+  <div><a href="./forceXy.html">Force Xy</a></div>
+  <div><a href="./forceXyTimeX.html">Force Xy Time X</a></div>
+  <div><a href="./forceXyzTimeXyz.html">Force Xyz Time X(yz)</a></div>
+  <div><a href="./forceXyzAdjustableTimeXyz.html">Force Xyz Adjustable Time Xyz</a></div>
+  <div><a href="./data_plot.html">Data Plot</a></div>
+  <%= hello %>
 
 </body>
