--- a/views/forceXyTimeX.html
+++ b/views/forceXyTimeX.html
@@ -18,32 +18,36 @@
   <link rel="stylesheet" type="text/css" href="../style.css" media="screen">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
+
 <body>
+  <h1 class="show-data">Click Page to Show Data</h1>
+  <hr>
 
   <canvas id="canvas" width='15000px' height='8000px'>
   <script>
   $(document).ready(function() {
+    $('body').on('click', function() {
 
-    var canvas = document.getElementById('canvas');
-    var ctx = canvas.getContext('2d');
-    var int = 0;
-
-    function forceXTimeX(data, start, stop, multiX, multiY, dropDataPoints) {
-      for (var x=start, ii=0; x<stop; x=x + dropDataPoints, ii=ii+1) {
-        setTimeout(function () {
-          ctx.lineTo(int, (data[start][1]*multiX)+2000);
-          ctx.stroke();
-          ctx.lineWidth = 15;
-          start += dropDataPoints;
-          int += dropDataPoints;
-        }, ii*data[ii][0]); //CRAZY HOW ii WORKS HERE, SHOULDNT(ii)
+      function forceXTimeX(data, start, stop, multiX, multiY, dropDataPoints) {
+        var canvas = document.getElementById('canvas');
+        var ctx = canvas.getContext('2d');
+        var int = 0;
+        for (var x=start, ii=0; x<stop; x=x + dropDataPoints, ii=ii+1) {
+          setTimeout(function () {
+            ctx.lineTo(int, (data[start][1]*multiX)+2000);
+            ctx.lineWidth = 15;
+            ctx.stroke();
+            start += dropDataPoints;
+            int += dropDataPoints;
+          }, ii*data[ii][0]); //CRAZY HOW ii WORKS HERE, SHOULDNT(ii)
+        }
       }
-    }
-    // console.log(int);
+      forceXTimeX(data5MileUp, 15000, 20022, 1000, 1000, 1);
+    });
     // function forceYTimeX(data, start, stop, multiX, multiY, dropDataPoints) {
     //   for (var y=start, ii=0; y<stop; y=y + dropDataPoints, ii=ii+1) {
     //     setTimeout(function () {
-    //       ctx.lineTo(int, (data[start][2]*multiY)+2000);
+    //     ctx.lineTo(int, (data[start][2]*multiY)+4000);
     //       ctx.stroke();
     //       ctx.lineWidth = 15;
     //       start += dropDataPoints;
@@ -54,7 +58,7 @@
     // function forceZTimeX(data, start, stop, multiX, multiY, dropDataPoints) {
     //   for (var i=start, ii=0; i<stop; i=i + dropDataPoints, ii=ii+1) {
     //     setTimeout(function () {
-    //       ctx.lineTo(int, (data[start][3]*multiY)+1500);
+    //     ctx.lineTo(int, (data[start][3]*multiY)+6000);
     //       ctx.stroke();
     //       ctx.lineWidth = 30;
     //       start += dropDataPoints;
@@ -64,21 +68,21 @@
     // }
 
     // data, start, stop, multiX, multiY, dropDataPoints
-    // forceYTimeX(data5MileDown, 0000, 24979, 500, 1000, 10);
-    forceXTimeX(data5MileUp, 10000, 25022, 1000, 1000, 1);
-    // forceYTimeX(data5MileUp, 0000, 29022, 1000, 1000, 10);
-    // forceZTimeX(data5MileUp, 20000, 22922, 500, 1000, 1);
-    // forceYTimeX(dataAccelAndBrake, 0000, 4489, 500, 500, 1);
-    // forceYTimeX(dataSpin3, 0000, 2800, 500, 500, 1);
-    // forceYTimeX(data5MileUp, 0000, 20000, 1000, 1000, 20);
+    // forceXTimeX(dataSwing, 10000, 25022, 1000, 1000, 100, 2);
+    // forceYTimeX(data5MileDown, 0000, 24979, 500, 1000, 10, 4);
+    // forceYTimeX(data5MileUp, 10000, 25022, 1000, 1000, 10);
+    // forceZTimeX(data5MileUp, 10000, 25022, 1000, 1000, 10);
+    // forceYTimeX(dataAccelAndBrake, 0000, 4489, 500, 500, 1, 4);
+    // forceYTimeX(dataSpin3, 0000, 2800, 500, 500, 1, 4);
+    // forceYTimeX(data5MileUp, 0000, 20000, 1000, 1000, 20, 4);
   });
 
 
-    </script>
-  </canvas>
+  </script>
+</canvas>
 
-  <hr>
-  <div><a href="./index.html" class="home">Home</a></div>
-  <hr>
+<hr>
+<div><a href="./index.html" class="home">Home</a></div>
+<hr>
 
 </body>
