--- a/views/data_plot.html
+++ b/views/data_plot.html
@@ -15,16 +15,48 @@
   <script src="../data/secFiveMileDown.js"></script>
   <script src="../data/secFiveMileUp.js"></script>
   <script src="../data/secToClass.js"></script>
-  <link rel="stylesheet" type="text/css" href="../style.css" media="screen">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="../stylesheets/style.css" media="screen">
+  <script src="../stylesheets/style.js"></script>
+  <script src="../stylesheets/jquery-1.11.3.min.js"></script>
 </head>
-<body>
 
-  <h1>Test Data</h1>
+<body>
+  <h1 class="show-data">Click Buttons To Show Data</h1>
+  <button id='forceXyzTimeXyz'>forceXyzTimeXyz</button>
+  <button id='forceXTime'>forceXTime</button>
+  <button id='forceXTimeRedline'>forceXTimeRedline</button>
   <hr>
+
+<canvas id="canvas" width='5000px' height='2000px'>
+  <script>
+  $(document).ready(function() {
+  // // data, start, stop, multiX, multiY ,multiZ, multiTime, dropDataPoints
+  //
+  // //1in1, dataOnTheY
+  // // forceYTime(dataSetName, 10000, 20000, 1000, 1000, 1);
+  $('#forceXTime').on('click', function() {
+    forceXTime(dataSpin3, 0000, 900, 1000, 1000, 1);
+  });
+  // forceZTime(dataSpin3, 0000, 900, 1000, 1000, 1);
+  $('#forceXTimeRedline').on('click', function() {
+    forceXTimeRedline(dataSpin3, 0000, 2900, 500, 500, 1, .5);//logicForRedline
+  });
+  //
+  // //1in1, dataXy
+  // // forceXy(dataSetName, 0, 10000, 1000, 1000, 1);
+  // // forceXyTime(dataSetName, 0, 10000, 1000, 1000, 1);
+  // // forceXyTimeX(dataSetName, 0, 10000, 1000, 1000, 1);
+  //
+  // // 3in1, dataXyzOnTheY
+  $('#forceXyzTimeXyz').on('click', function() {
+    forceXyzTimeXyz(dataSpin3, 900, 2900, 500, 500, 500, 1, 1);
+  });
+  // forceXyzAdjustableTimeXyz(dataSpin3, 0, 1000, 500, 500, 500, 1, 1);
+});
+  </script>
+</canvas>
 
   <hr>
   <div><a href="./index.html" class="home">Home</a></div>
   <hr>
-
 </body>
