car model button added, b1 all data together, b2 most current in black

--- a/views/data_plot.html
+++ b/views/data_plot.html
@@ -27,6 +27,7 @@
   <p>Testing Zone:
   <button id='test-functions'>Test Functions</button>
   <button id='test-z'>Test Z Aixs</button>
+  <button id='car-model'>Test Car Model</button>
   </p>
 
   <p>Controlls:
