--- a/views/data_plot.html
+++ b/views/data_plot.html
@@ -15,71 +15,85 @@
   <script src="../data/secFiveMileUp.js"></script>
   <script src="../data/secToClass.js"></script>
   <script src="../data/dataResearchPark.js"></script>
+  <script src="../data/dataStandDrive.js"></script>
 
   <link rel="stylesheet" type="text/css" href="../stylesheets/style.css" media="screen">
   <script src="../stylesheets/jquery-1.11.3.min.js"></script>
   <script src="../controllers/app.js"></script>
   <script src="../controllers/dataControls.js"></script>
 </head>
-
 <body>
-  <h1 class="show-data">Data</h1>
+
+  <h1 class="show-data">Hows My Driving</h1>
   <hr>
 
-  <p>Testing Zone:
-  <button id='test-functions'>Test Functions</button>
-  <button id='test-z'>Test Z Aixs</button>
-  <button id='car-model'>Test Car Model</button>
-  <button id='g-ball-test'>Test G Ball</button>
-  <button id='g-ball-v-2'>gBallV2</button>
-  </p>
+<div class='col-5'>
+  <h4>
+    Testing Zone:
+    <button id='test-functions'>Test Functions</button>
+    <button id='test-z'>Test Z Aixs</button>
+    <button id='car-model'>Test Car Model</button>
+    <button id='g-ball-test'>Test G Ball</button>
+    <button id='g-ball-v-2'>gBallV2</button>
+  </h4>
+  <h4>
+    Controlls:
+    <button id='cartesian'>Cartesian Layout</button>
+    <button id='freeze'>Freeze Data</button>
+    <button id='reset'>RESET</button>
+  </h4>
+  <h4>
+    Functions:
+    <button id='accel-xy-2pts'>gBall Accel XY 2 Points</button>
+    <button id='accel-xy-1pt'>gBall Accel XY 1 Point</button>
+  </h4>
+    <b><div id="text-div6"></div></b>
+</div>
 
-  <p>Controlls:
-  <button id='cartesian'>CARTESIAN LAYOUT</button>
-  <button id='freeze'>Freeze Data</button>
-  <button id='reset'>Reset</button>
-  </p>
+<div class='col-3'>
+  <h3>
+    <div id="text-div1"></div>
+    <div id="text-div2"></div>
+    <div id="text-div3"></div>
+    <div id="text-div4"></div>
+    <div id="text-div5"></div>
+    <div id="text-div17"></div>
+  </h3>
+</div>
 
-  <p>Functions:
-  <button id='accel-xy-2pts'>gBall Accel XY 2 Points</button>
-  <button id='accel-xy-1pt'>gBall Accel XY 1 Point</button>
-  </p>
+<div class='col-4'>
+  <h3><div id="text-div14" class="center"></div></h3>
+  <h5><div id="text-div15" class="center"></div></h5>
+  <h3><div id="text-div16" class="center"></div></h3>
+</div>
 
-<h3>
-<div id="text-div1"></div>
-<div id="text-div2"></div>
-<div id="text-div3"></div>
-<div id="text-div4"></div>
-<div id="text-div5"></div>
-<div id="text-div17"></div>
-</h3>
-<b><div id="text-div6"></div></b>
-<hr>
-<div id="text-div7" class="space"></div>
-<div id="text-div8" class="space"></div>
-<div id="text-div9" class="space"></div>
-<div id="text-div10" class="space"></div>
-<div id="text-div11" class="space"></div>
-<div id="text-div12" class="space"></div>
-<div id="text-div13" class="space"></div>
-<h3><div id="text-div14" class="center"></div></h3>
-<h5><div id="text-div15" class="center"></div></h5>
-<h3><div id="text-div16" class="center"></div></h3>
-<div id="text-div20" class="space"></div>
-
-
-<script>
-// window.onload = function() {
-//     var ctx = c.getContext("2d");
-//     ctx.drawImage(img, 10, 10);
-// }
-  // document.getElementById("canvas-pic").innerHTML = "../images/tach.png";
-</script>
+<div id='all-errors-div' class="space"></div>
+<div class='col-12'></div>
 
 
-<canvas id="canvas">
-  <!-- <img src="../images/tach.png" id="canvas-pic"></img> -->
-</canvas>
+
+<div class='col-2'>
+  <hr>
+  <b><div id="text-div-crash" class="space"></div></b>
+  <div id="text-div-good-driver" class="space"></div>
+  <div id="text-div-hard-left" class="space"></div>
+  <div id="text-div-hard-right" class="space"></div>
+
+  <div id="text-div9" class="space"></div>
+  <div id="text-div21" class="space"></div>
+  <div id="text-div10" class="space"></div>
+  <div id="text-div22" class="space"></div>
+  <div id="text-div-bump" class="space"></div>
+  <div id="text-div-airborne" class="space"></div>
+  <div id="text-div13" class="space"></div>
+  <div id="text-div20" class="space"></div>
+</div>
+
+<div class='col-10'>
+  <canvas id="canvas">
+    <!-- <img src="../images/tach.png" id="canvas-pic"></img> -->
+  </canvas>
+</div>
 
 <canvas id="canvas2">
 </canvas>
