--- a/views/index.html
+++ b/views/index.html
@@ -20,17 +20,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </head>
 <body>
-  <h2>1in1, dataOnTheY</h2>
-    <div><a href="./data_plot.html" id='forceXTime'>forceXTime(data, start, stop, multiX, multiY, dropDataPoints);</a></div>
-    <div><a href="./data_plot.html" id='forceYTime'>forceYTime(data, start, stop, multiX, multiY, dropDataPoints);</a></div>
-    <div><a href="./data_plot.html" id='forceZTime'>forceZTime(data, start, stop, multiX, multiY, dropDataPoints);</a></div>
-    <div><a href="./data_plot.html" id='forceXTimeRedline'>forceXTimeRedline(data, start, stop, multiX, multiY, dropDataPoints, redlineG)</a></div>
-  <h2>1in1, dataXy</h2>
-    <div><a href="./data_plot.html" id='forceXy'>forceXy(data, start, stop, multiX, multiY, dropDataPoints);</a></div>
-    <div><a href="./data_plot.html" id='forceXyTime'>forceXyTime(data, start, stop, multiX, multiY, dropDataPoints);</a></div>
-    <div><a href="./data_plot.html" id='forceXyTimeX'>forceXyTimeX(data, start, stop, multiX, multiY, dropDataPoints);</a></div>
-  <h2>3in1, dataXyzOnTheY</h2>
-    <div><a href="./data_plot.html">forceXyzTimeXyz(data, start, stop, multiX, multiY, multiZ, multiTime, dropDataPoints);</a></div>
-    <div><a href="./data_plot.html" id='forceXyzAdjustableTimeXyz'>forceXyzAdjustableTimeXyz(data, start, stop, multiX, multiY, multiZ, multiTime, dropDataPoints);</a></div>
+
+  <h1><a href="./data_plot.html" id="some-shit" class="center">Click To See Some Shit!</a></h1>
+
 
 </body>
