--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,23 @@
+body{
+  padding-left: 1%;
+  padding-top: 1%;
+  padding-right: 1%;
+  padding-bottom: 1%;
+}
+#bg-image {
+  background-image: url("../images/ferrariSide.jpg");
+  background-width: 100%;
+  background-height: 100%;
+  background-repeat:no-repeat;
+  background-size:contain;
+  background-position:center;
+}
+
+#random-box{
+  width: 100px;
+  height: 100px;
+  border: 5px solid black;
+}
 .col-1-var(){
   width: 8.33333%;
   height: var()px;
@@ -60,13 +80,6 @@
 }
 
 
-body{
-  /*padding-left: 1%;
-  padding-top: 1%;
-  padding-right: 1%;
-  padding-bottom: 1%;*/
-  /*background-image: url("../images/whiteGradient.jpg");*/
-}
 
 .space {
   padding-bottom: 5px;
