z-circle working in XyzFull, some wires still crossed

--- a/views/data_plot.html
+++ b/views/data_plot.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Data Plot</title>
-    <script src="../server.js"></script>
+  <script src="../server.js"></script>
   <script src="../data/initSpin1.js"></script>
   <script src="../data/initSpin2.js"></script>
   <script src="../data/initSpin3.js"></script>
@@ -16,9 +16,10 @@
   <script src="../data/secFiveMileUp.js"></script>
   <script src="../data/secToClass.js"></script>
   <script src="../data/dataStandDrive.js"></script>
-  <script src="../data/data5MileDownFullSet.js"></script>
+  <script src="../data/data5MileDownLongFull.js"></script>
   <script src="../data/dataUnknown.js"></script>
 
+  <!-- <link href='..videos/data5MileDown' -->
   <link rel="stylesheet" type="text/css" href="../stylesheets/style.css" media="screen">
   <script src="../stylesheets/jquery-1.11.3.min.js"></script>
   <script src="../controllers/app.js"></script>
@@ -43,6 +44,7 @@
 // });
 console.log('hi');
 </script>
+
 
 <div class='col-5'>
   <h4>
@@ -94,6 +96,11 @@ console.log('hi');
 
 <div class='col-2'>
   <hr>
+  <!-- <video id="sampleMovie" width="270" height="480" preload controls> -->
+  <!-- <source src="../videos/data5MileDownVid.MOV" /> -->
+  <!-- <source src="../videos/dataStandTest.MOV" />
+  </video> -->
+
   <b><div id="text-div-crash" class="space"></div></b>
     <div id="text-div-good-driver" class="space"></div>
     <div id="text-div-hard-left" class="space"></div>
@@ -114,6 +121,7 @@ console.log('hi');
     <!-- <img src="../images/tach.png" id="canvas-pic"></img> -->
   </canvas>
 </div>
+
 
 <canvas id="canvas2">
 </canvas>
