--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -18,6 +18,11 @@ body{
   height: 100px;
   border: 5px solid black;
 }
+
+#demo-movie-div {
+  display: hide;
+}
+
 .col-1-var(){
   width: 8.33333%;
   height: var()px;
