--- a/views/index.html
+++ b/views/index.html
@@ -2,26 +2,29 @@
 <html>
 <head>
   <title>Data Plot</title>
-  <script src="../app.js"></script>
-  <script src="../data/initSpin1.js"></script>
-  <script src="../data/initSpin2.js"></script>
-  <script src="../data/initSpin3.js"></script>
-  <script src="../data/initRunIndoor.js"></script>
-  <script src="../data/initSwing.js"></script>
-  <script src="../data/secAccelAndLeft.js"></script>
-  <script src="../data/secAccelBrake.js"></script>
-  <script src="../data/secCanyonDown.js"></script>
-  <script src="../data/secCanyonUp.js"></script>
-  <script src="../data/secFiveMileDown.js"></script>
-  <script src="../data/secFiveMileUp.js"></script>
-  <script src="../data/secToClass.js"></script>
+  <script src="../data/dataStandDrive.js"></script>
+  <script src="../data/data5MileDownLongFull.js"></script>
+  <script src="../data/data5MileDownFullSet.js"></script>
+  <script src="../data/dataStandDriveFull2.js"></script>
+
   <link rel="stylesheet" type="text/css" href="../stylesheets/style.css" media="screen">
   <script src="../stylesheets/jquery-1.11.3.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="../controllers/lineFunctions.js"></script>
+  <script src="../controllers/app.js"></script>
+  <script src="../controllers/lineFunctions.js"></script>
+  <script src="../controllers/dataControls.js"></script>
+  <script type="text/javascript"></script>
 </head>
 <body>
 
   <h1><a href="./data_plot.html" id="some-shit" class="center">Click To See Some Shit!</a></h1>
 
+<canvas id="canvas2">
+  <script>
+
+
+
+  </script>
+</canvas>
 
 </body>
