latitude data left separated and converted

--- a/views/data_plot.html
+++ b/views/data_plot.html
@@ -51,6 +51,7 @@ Functions:
 <button id='movement-xy-1point'>Movement XY 1 Point</button>
 <button id='orientation'>Orien</button>
 <button id='wheel'>Wheel</button>
+<button id='location-route-model'>Location</button>
 <hr>
 <b><div id="text-div6"></div></b>
 </div>
@@ -112,15 +113,20 @@ Functions:
 <div id="text-div20" class="space"></div>
 </div>
 
-<div class='col-8'>
+<div class='col-10'>
 <canvas id="canvas">
-
-
-
-<script>
-</script>
 </canvas>
 </div>
+
+<div class='col-12'>
+</div>
+
+<div class='col-12'>
+<canvas id="canvas-location">
+</canvas>
+</div>
+
+
 
 
 
